--- a/phonebook-ui/src/styles.css
+++ b/phonebook-ui/src/styles.css
@@ -1,5 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
-body {
-    padding: 2em;
-    font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif, “Apple Color Emoji”, “Segoe UI Emoji”, “Segoe UI Symbol”;
+/*body {*/
+/*    padding: 2em;*/
+/*    font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif, “Apple Color Emoji”, “Segoe UI Emoji”, “Segoe UI Symbol”;*/
+/*}*/
+
+.loader {
+    background-color: rgba(0, 0, 0, 0.85);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 9999;
+    display: none;
+}
+
+.main-filter-div {
+    display: inline-flex;
+    margin: 10px 0px -40px 1000px;
+    /*width: 50%;*/
+    /*float :right;*/
+}
+
+.p-dropdown {
+    width: 300px ;
+}
+
+.filter-div {
+    width: 50%;
+    margin: 2px;
+}
+
+.p-datatable .p-datatable-thead > tr > th {
+    background: #f68b1e;
+    color: black;
 }
