--- a/phonebook-ui/src/app/jumia-phonebook-dashboard/jumia-phonebook-dashboard.component.html
+++ b/phonebook-ui/src/app/jumia-phonebook-dashboard/jumia-phonebook-dashboard.component.html
@@ -4,7 +4,7 @@
   <div class="filter-div">
     <h4>Select a country:</h4>
     <span class="p-float-label">
-    <p-dropdown id="selectCountryDropdown" [autoDisplayFirst]="false" (onChange)="filter()" [showClear]="true" [(ngModel)]="customerFilter.countryNameFilter"
+    <p-dropdown id="selectCountryDropdown" [autoDisplayFirst]="false" (onChange)="filterCustomers()" [showClear]="true" [(ngModel)]="customerFilter.countryNameFilter"
                 [options]="countryNamesOptions"
                 styleClass="filter-dropdown"></p-dropdown>
     <label for="selectCountryDropdown">Select a country</label>
@@ -13,7 +13,7 @@
   <div class="filter-div">
     <h4>Select Validity:</h4>
     <span class="p-float-label">
-    <p-dropdown id="selectValidtyDropdown" [autoDisplayFirst]="false" (onChange)="filter()" [showClear]="true" [(ngModel)]="customerFilter.stateFilter"
+    <p-dropdown id="selectValidtyDropdown" [autoDisplayFirst]="false" (onChange)="filterCustomers()" [showClear]="true" [(ngModel)]="customerFilter.stateFilter"
                 [options]="stateOptions"
                 styleClass="filter-dropdown"></p-dropdown>
     <label for="selectValidtyDropdown">Select Validity</label>
@@ -25,9 +25,6 @@
 
 <div class="card">
   <div class="p-mb-3">
-<!--    <p-button type="button" icon="pi pi-chevron-left" (click)="prev()" [disabled]="isFirstPage()" styleClass="p-button-text"></p-button>-->
-<!--    <p-button type="button" icon="pi pi-refresh" (click)="reset()" styleClass="p-button-text"></p-button>-->
-<!--    <p-button type="button" icon="pi pi-chevron-right" (click)="next()" [disabled]="isLastPage()" styleClass="p-button-text"></p-button>-->
   </div>
   <p-table #dt [value]="customers" [rows]="pageSize">
     <ng-template pTemplate="header">
@@ -49,8 +46,5 @@
   </p-table>
   <p-paginator (onPageChange)="getPage($event)" [rowsPerPageOptions]="[10,20,50]" [rows]="10"
                totalRecords="{{totalRecords}}"></p-paginator>
-</div>
-<div id="loader" class="loader">
-  <i class="spinner fa fa-circle-o-notch fa-spin fa-5x"></i>
 </div>
 </div>
