--- a/phonebook-ui/src/app/jumia-phonebook-dashboard/jumia-phonebook-dashboard.component.html
+++ b/phonebook-ui/src/app/jumia-phonebook-dashboard/jumia-phonebook-dashboard.component.html
@@ -1,52 +1,64 @@
-
-  <div class="main-filter-div">
+<p-toast position="top-right"></p-toast>
+<div class="app-header">
+  <h2>Jumia Phonebook<i class="pi pi-book app-header-icon"></i></h2>
+  <div class="filters">
     <div class="filter-div">
-    <span class="p-float-label">
+      <span class="p-float-label">
+        <p-dropdown id="selectCountryDropdown"
+                    styleClass="filter-dropdown"
+                    [autoDisplayFirst]="false"
+                    (onChange)="filterCustomers()"
+                    [showClear]="true"
+                    [(ngModel)]="customerFilter.countryNameFilter"
+                    [options]="countryNamesOptions">
+        </p-dropdown>
+        <label for="selectCountryDropdown">Filter by Country</label>
       </span>
     </div>
     <div class="filter-div">
-    <span class="p-float-label">
-    <p-dropdown id="selectCountryDropdown" [autoDisplayFirst]="false" (onChange)="filterCustomers()" [showClear]="true" [(ngModel)]="customerFilter.countryNameFilter"
-                [options]="countryNamesOptions"
-                styleClass="filter-dropdown"></p-dropdown>
-    <label for="selectCountryDropdown">Select a country</label>
-      </span>
-    </div>
-    <div class="filter-div">
-    <span class="p-float-label">
-    <p-dropdown id="selectValidtyDropdown" [autoDisplayFirst]="false" (onChange)="filterCustomers()" [showClear]="true" [(ngModel)]="customerFilter.stateFilter" [options]="stateOptions" styleClass="filter-dropdown">
-        <ng-template let-option pTemplate="item">
-          <span [class]="'is-valid-badge status-' + option.value">{{option.value}}</span>
-        </ng-template>
-      </p-dropdown>
-    <label for="selectValidtyDropdown">Select Validity</label>
+      <span class="p-float-label">
+        <p-dropdown id="selectValidtyDropdown"
+                    styleClass="filter-dropdown"
+                    [autoDisplayFirst]="false"
+                    (onChange)="filterCustomers()"
+                    [showClear]="true"
+                    [(ngModel)]="customerFilter.stateFilter"
+                    [options]="stateOptions">
+          <ng-template let-option pTemplate="item">
+            <span >{{option.label}}</span>
+          </ng-template>
+        </p-dropdown>
+        <label for="selectValidtyDropdown">Filter by Validity</label>
       </span>
     </div>
   </div>
-
-
+</div>
 <hr>
-  <div class="dashboard">
-    <div class="p-mb-3">
-    </div>
-    <p-table #dt [value]="customers" [rows]="pageSize">
-      <ng-template pTemplate="header">
-        <tr>
-          <th pSortableColumn="name">Name <p-sortIcon field="name"></p-sortIcon></th>
-          <th pSortableColumn="phone">Phone Number <p-sortIcon field="phone"></p-sortIcon></th>
-          <th pSortableColumn="countryName">Country <p-sortIcon field="countryName"></p-sortIcon></th>
-          <th pSortableColumn="valid">Valid <p-sortIcon field="valid"></p-sortIcon></th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-customer>
-        <tr class="data-row-striped">
-          <td class="data-cell-name">{{customer.name}}</td>
-          <td class="data-cell-phone">{{customer.phone}}</td>
-          <td class="data-cell-country">{{customer.countryName}}</td>
-          <td class="data-cell-valid"><span [class]="'is-valid-badge status-' + customer.valid">{{customer.valid}}</span></td>
-        </tr>
-      </ng-template>
-    </p-table>
-    <p-paginator (onPageChange)="getPage($event)" [rowsPerPageOptions]="[10,20,50]" [rows]="10"
-                 totalRecords="{{totalRecords}}"></p-paginator>
+<div class="dashboard">
+  <p-table #dt [value]="customers" [rows]="pageSize" >
+    <ng-template pTemplate="header">
+      <tr>
+        <th pSortableColumn="name">Name <p-sortIcon field="name"></p-sortIcon></th>
+        <th pSortableColumn="phone">Phone Number <p-sortIcon field="phone"></p-sortIcon></th>
+        <th pSortableColumn="countryName">Country <p-sortIcon field="countryName"></p-sortIcon></th>
+        <th pSortableColumn="valid">Valid <p-sortIcon field="valid"></p-sortIcon></th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-customer>
+      <tr class="data-row-striped">
+        <td class="data-cell-name">{{customer.name}}</td>
+        <td class="data-cell-phone">{{customer.phone}}</td>
+        <td class="data-cell-country">{{customer.countryName}}</td>
+        <td class="data-cell-valid"><i class="pi pi-circle-on" [class]="'is-valid-badge status-' + customer.valid"></i></td>
+      </tr>
+    </ng-template>
+  </p-table>
+  <div>
+    <p class="total-records">Total number of records: {{totalRecords}}</p>
+    <p-paginator (onPageChange)="getPage($event)"
+                 [rowsPerPageOptions]="[10,20,50]"
+                 [rows]="10"
+                 totalRecords="{{totalRecords}}">
+    </p-paginator>
   </div>
+</div>
