--- a/phonebook-ui/src/app/jumia-phonebook-dashboard/jumia-phonebook-dashboard.component.css
+++ b/phonebook-ui/src/app/jumia-phonebook-dashboard/jumia-phonebook-dashboard.component.css
@@ -3,30 +3,98 @@
     padding: .25em .5rem;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 12px;
+    font-size: 1.3em;
     letter-spacing: .3px;
 }
 
 .is-valid-badge.status-true {
-    background-color: #c8e6c9;
-    color: #256029;
+    color: #43A047;
 }
 
 .is-valid-badge.status-false {
-    background-color: #ffcdd2;
-    color: #c63737;
+    color: #E53935;
 }
 
 .data-row-striped:nth-child(even) {
     background: #f68b1e0f;
 }
 
-.data-cell-name { width: 40%; }
-.data-cell-phone { width: 25%; }
-.data-cell-country { width: 25%; }
-.data-cell-valid { width: 10%; }
+.data-cell-name {
+    width: 40%;
+}
+
+.data-cell-phone {
+    width: 25%;
+}
+
+.data-cell-country {
+    width: 25%;
+}
+
+.data-cell-valid {
+    width: 10%;
+}
 
 .dashboard {
     width: 90%;
     margin-left: 80px;
+}
+
+.total-records {
+    text-align: -webkit-center;
+    color: #495057;
+    font-weight: normal;
+    margin-bottom: 0px;
+}
+
+.app-header {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 30px;
+    color: #495057;
+}
+
+.filters {
+    display: inline-flex;
+    align-items: center;
+}
+
+.app-header-icon {
+    margin-left: 20px;
+    font-size: 1.3rem;
+}
+
+p-table >>> th {
+    background: #f68b1e !important;
+    color: white !important;
+}
+
+div.app-header >>> .p-dropdown {
+    width: 300px !important;
+    margin: 2px;
+}
+
+p-table >>> .p-sortable-column,
+p-table >>> .p-sortable-column-icon {
+    color: white !important;
+}
+
+p-table >>> .p-highlight,
+p-table >>> .p-highlight >>> .p-sortable-column-icon{
+    color: white !important;
+}
+
+p-table >>> .p-sortable-column:focus {
+    box-shadow: inset 0 0 0 0.15rem #f68b1e;
+    background-color: white;
+    outline: 0 none;
+}
+
+div.app-header >>> .p-dropdown:not(.p-disabled):hover {
+    border-color: #f68b1e !important;
+}
+
+div.app-header >>> .p-dropdown:not(.p-disabled).p-focus {
+    box-shadow: inset 0 0 0 0.15rem #f68b1e !important;
+    border-color: #f68b1e !important;
 }
